philly-311-citywide-meta/src/objects/APIkey_Register__c.object
<CustomObject>
    <fields>
        <fullName>App_Name_Open311__c</fullName>
        <label>App Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Open311__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name_Open311__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Open311__c</fullName>
        <displayFormat>Key{00000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Name_Open311__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Open311__c</fullName>
        <label>Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Open311__c</fullName>
        <label>Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>url_Open311__c</fullName>
        <label>Product URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>API Key Register</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>App_Name_Open311__c</columns>
        <columns>First_Name_Open311__c</columns>
        <columns>Last_Name_Open311__c</columns>
        <columns>Organization_Open311__c</columns>
        <columns>url_Open311__c</columns>
        <columns>Email_Open311__c</columns>
        <columns>Phone_Open311__c</columns>
        <columns>Key_Open311__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Apikey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Key Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>